examples/misc/error/compilation/eval_wdt_selectable.bfml
let main = [
  $build { x }
  + x:(1)hoge
]